# pancake

./: .gitignore  .gitlab-ci.yml  .rustc_info.json  .rustdoc_fingerprint.json  .rusty-hook.toml  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
examples_wasm_txn/: Cargo.toml  all.html  build.rs  index.html  readme.md
examples_wasm_txn/src/: lib.rs  simple_del.rs  simple_get_pk_one.rs  simple_get_pk_range.rs  simple_get_sv_range.rs  simple_put.rs  utils.rs
examples_wasm_txn/utils/: fn.pkpv_to_string.html  index.html  sidebar-items.js
pancake/: Cargo.toml  all.html  index.html  sidebar-items.js
pancake/ds_n_a/: index.html  sidebar-items.js
pancake/ds_n_a/atomic_linked_list/: enum.ListElem.html  index.html  sidebar-items.js  struct.AtomicLinkedList.html  struct.AtomicLinkedListIterator.html  struct.AtomicLinkedListSnapshot.html  struct.AtomicLinkedListSnapshotIterator.html  struct.ListNode.html
pancake/ds_n_a/atomic_queue/: index.html  sidebar-items.js  struct.AtomicQueue.html  struct.QueueNode.html
pancake/ds_n_a/bisect/: fn.bisect_left.html  fn.bisect_right.html  index.html  sidebar-items.js
pancake/ds_n_a/cmp/: index.html  sidebar-items.js  trait.TryPartialOrd.html
pancake/ds_n_a/interval_set/: index.html  sidebar-items.js  struct.Interval.html  struct.IntervalSet.html
pancake/ds_n_a/persisted_u64/: index.html  sidebar-items.js  struct.PersistedU64.html
pancake/ds_n_a/send_ptr/: index.html  sidebar-items.js  struct.SendPtr.html
pancake/frontend/: index.html  sidebar-items.js
pancake/frontend/api/: enum.Operation.html  enum.SearchRange.html  enum.Statement.html  index.html  sidebar-items.js
pancake/frontend/http/: fn.main.html  index.html
pancake/frontend/query/: index.html  sidebar-items.js
pancake/src/: lib.rs
pancake/src/ds_n_a/: mod.rs
pancake/src/frontend/: mod.rs
pancake/storage/: index.html  sidebar-items.js
pancake/storage/db/: index.html  struct.DB.html
pancake/storage/engine_serial/: index.html  sidebar-items.js
pancake/storage/engine_ssi/: enum.ClientCommitDecision.html  index.html  sidebar-items.js  struct.DB.html  struct.Txn.html
pancake/storage/engines_common/: enum.Entry.html  index.html  sidebar-items.js  struct.ReadonlyMemLog.html  struct.SSTable.html  struct.WritableMemLog.html
pancake/storage/lsm/: index.html  sidebar-items.js  struct.LSMTree.html
pancake/storage/sec_idx/: index.html  struct.SecondaryIndex.html
pancake/storage/serde/: enum.Datum.html  enum.DatumType.html  enum.OptDatum.html  fn.read_item.html  (+16 more)
pancake_engine_common/: Cargo.toml  all.html  enum.Entry.html  index.html  sidebar-items.js  struct.ReadonlyMemLog.html  struct.SSTable.html  struct.WritableMemLog.html
pancake_engine_common/ds_n_a/: index.html  sidebar-items.js
pancake_engine_common/entry/: enum.Entry.html  index.html
pancake_engine_common/fs_utils/: constant.ENV_VAR_PARENT_DIR.html  constant.SERIAL_DB_ROOT_NAME.html  constant.SSI_DB_ROOT_NAME.html  enum.EngineType.html  fn.create_dir_all.html  fn.default_db_root_dir.html  fn.hard_link_file.html  fn.lock_file.html  fn.open_file.html  fn.read_dir.html  fn.remove_dir_all.html  fn.remove_file.html  fn.rename_file.html  fn.seek.html  index.html  sidebar-items.js  struct.AntiCollisionParentDir.html  struct.NamePattern.html  struct.PathNameNum.html
pancake_engine_common/memlog_r/: index.html  sidebar-items.js  struct.ReadonlyMemLog.html
pancake_engine_common/memlog_w/: index.html  sidebar-items.js  struct.WritableMemLog.html
pancake_engine_common/merging/: fn.merge_differently_typed_entry_iters.html  fn.merge_entry_iters.html  index.html  sidebar-items.js  trait.Mergeable.html
pancake_engine_common/src/: entry.rs  fs_utils.rs  lib.rs  memlog_r.rs  memlog_w.rs  merging.rs  sstable.rs
pancake_engine_common/sstable/: constant.FILE_OFFSETS_SPARSENESS.html  fn.is_kv_sparsely_captured.html  index.html  sidebar-items.js  struct.FileOffset.html  struct.SSTable.html  struct.SparseFileOffsets.html
pancake_engine_ssi/: Cargo.toml  all.html  enum.ClientCommitDecision.html  enum.ScndIdxCreationJobErr.html  enum.ScndIdxDeletionJobErr.html  index.html  sidebar-items.js  struct.DB.html  struct.Txn.html
pancake_engine_ssi/db/: constant.ALL_SCND_IDX_CREATION_JOBS_DIR_NAME.html  constant.FC_ABLE_COMMIT_VERS_CAPACITY.html  constant.LSM_DIR_NAME.html  constant.SCND_IDXS_STATE_FILE_NAME.html  index.html  sidebar-items.js  struct.DB.html
pancake_engine_ssi/db_state/: index.html  sidebar-items.js
pancake_engine_ssi/ds_n_a/: index.html  sidebar-items.js
pancake_engine_ssi/lsm/: index.html  sidebar-items.js
pancake_engine_ssi/opers/: index.html  sidebar-items.js
pancake_engine_ssi/src/: db.rs  lib.rs  lsm_dir.rs
pancake_engine_tests/: Cargo.toml
pancake_engine_tests/tests/: main.rs
pancake_server/: Cargo.toml  all.html  index.html  sidebar-items.js
pancake_server/assets/: db.wit  udf.wit
pancake_server/common/: index.html  sidebar-items.js
pancake_server/engine_serial/: index.html
pancake_server/engine_ssi/: index.html  sidebar-items.js
pancake_server/oper/: index.html  sidebar-items.js
pancake_server/src/: api.rs  http.rs  lib.rs  main.rs
pancake_server/tests/: pancake-server-test.sh  pancake-test-script.sh
pancake_types/: Cargo.toml  all.html  index.html  sidebar-items.js
pancake_types/io_utils/: fn.read_until_then_trim.html  index.html  sidebar-items.js
pancake_types/iters/: index.html  sidebar-items.js  struct.KeyIterator.html  struct.KeyValueIterator.html  struct.KeyValueRangeIterator.html  struct.KeyValueReader.html
pancake_types/serde/: enum.Datum.html  enum.DatumType.html  enum.OptDatum.html  enum.ReadResult.html  index.html  sidebar-items.js  struct.DatumTypeInt.html  struct.WriteLen.html
pancake_types/src/: lib.rs
pancake_types/types/: enum.SVShared.html  index.html  sidebar-items.js  struct.PrimaryKey.html  struct.SVPKShared.html  struct.SubValue.html  struct.SubValueSpec.html  struct.Value.html  trait.Deser.html  trait.Ser.html  trait.Serializable.html  type.PKShared.html  type.PVShared.html
(+1652 files in other folders)
