[package]
name = "pancake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
derive_more = "*"
hashbag = "0.1"
hyper = { version = "*", features = ["full"] }
itertools = "*"
num-derive = "0.3"
num-traits = "0.2"
owning_ref = "0.4"
regex = "*"
routerify = "*"
shorthand = "0.1"
tokio = { version = "1.15", features = ["full"] }

[dev-dependencies]
async-trait = "0.1"
rand = "*"
rusty-hook = "^0.11.0"
