[package]
name = "pancake_engine_common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
fs2 = { workspace = true }
itertools = { workspace = true }
shorthand = { workspace = true }

pancake_types = { workspace = true }

[lints]
workspace = true
