[package]
name = "pancake_engine_ssi"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
shorthand = { workspace = true }
tokio = { workspace = true }

pancake_engine_common = { workspace = true }
pancake_types = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
