[package]
name = "pancake_server"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
derive_more = { workspace = true }
regex = { workspace = true }
shorthand = { workspace = true }
tokio = { workspace = true }
wit-bindgen-host-wasmtime-rust = { workspace = true }

pancake_engine_common = { workspace = true }
pancake_engine_serial = { workspace = true }
pancake_engine_ssi = { workspace = true }
pancake_types = { workspace = true }

[lints]
workspace = true
