[package]
name = "pancake_types"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
owning_ref = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[lints]
workspace = true
